# IoT-Weather-Station

./: .gitignore  README.md
Config-App/: app_start.js  build.sh  main.css  main.html  main.js  package-lock.json  package.json
Weather-Station/: CMakeLists.txt  build.sh  error_codes.txt  sdkconfig  sdkconfig.old
Weather-Station/components/cJSON/: CMakeLists.txt
Weather-Station/components/cJSON/include/: cJSON.h
Weather-Station/components/helpers/: CMakeLists.txt  helpers.c
Weather-Station/components/helpers/include/: helpers.h
Weather-Station/components/i2c_devices/: CMakeLists.txt  i2c_devices.c
Weather-Station/components/i2c_devices/include/: i2c_devices.h
Weather-Station/components/sd_card/: CMakeLists.txt  parsing_settings.c  sd_card.c
Weather-Station/components/sd_card/include/: sd_card.h
Weather-Station/components/server/: CMakeLists.txt  parser.py  server.c
Weather-Station/components/server/include/: server.h
Weather-Station/components/server/pages/: device_info.c  device_info.html  home.c  home.html  settings.c  settings.html
Weather-Station/components/server/rest_api/: data.c  files.c
Weather-Station/components/settings_types/: CMakeLists.txt  settings_types.c
Weather-Station/components/settings_types/include/: settings_types.h
Weather-Station/components/wifi/: CMakeLists.txt  wifi.c
Weather-Station/components/wifi/include/: wifi.h
Weather-Station/main/: CMakeLists.txt  Weather-Station.c
doc/schematics_src/: logical_connections_only.kicad_sch  power_connections_only.kicad_sch  schematics.kicad_pro  schematics.kicad_sch
